--- a/JavaScript/js_and_descrip.html
+++ b/JavaScript/js_and_descrip.html
@@ -47,6 +47,15 @@
     循环对象   for in   for of  forEach
     函数是抽象，代码重复时候，调用函数较恰当，里面写逻辑
     函数实际是变量，写法两个，调用都一样，方法体中的arguments用法，js自动补全分号；所以return不要换行写
+    变量在函数体内全部先声明，局部作用局，套函数的局部作用域，window是全局对象，let,const块级作用域
+    对象里的方法，this,apply,call
+    高阶函数，函数传参为变量或函数
+    arr.map arr.reduce arr.filter arr.sort
+    闭包
+    js中一切都是对象，尽可能不要使用包装对象，typeof
+    Date对象
+    RegExp正则
+    json
 </h>
 </body>
 </html>
