--- a/Git/git_and_des.html
+++ b/Git/git_and_des.html
@@ -17,6 +17,22 @@
     /usr/local/git/bin/git --version
     看到版本号说明安装成功
     ln -s /usr/local/git/bin/* /usr/bin/
-    建立软连接方便以后使用
+    建立软连接方便以后使用ok
+    git init
+    git status
+    git add .
+    git commit -m ''
+    git push origin master
+    git remote add origin ''
+    git config --global user.name =
+    git config --global user.email =
+
+    git clone
+    git add .
+    git commit -m
+    git push
+    输入名字
+    输入密码
+    ok
 </body>
 </html>
