--- a/Git/git_and_des.html
+++ b/Git/git_and_des.html
@@ -34,5 +34,15 @@
     输入名字
     输入密码
     ok
+
+    当前分支上写代码，出现bug，就新建一个分支修复bug,当前分支用
+    git stash
+    修复完后用
+    git stash list
+    解除stash作用
+    git stash pop
+    然后正常工作
+
+    合并之后再删除分支
 </body>
 </html>
