--- a/JavaScript/js_and_descrip.html
+++ b/JavaScript/js_and_descrip.html
@@ -56,7 +56,16 @@
     Date对象
     RegExp正则
     json
-    面向对象
+    面向对象#########################]
+    主流浏览器，IE,Chrom,firefox
+    浏览器对象
+    window innerWidth innerHeight
+    navigator 浏览器名称，版本，语言，系统类型
+    screen    width height
+    location 是url对象 用href来获取  protocol port host pathname search hash 加载一个新页面location.assign(),location.reload()
+    document getElementById getElementsByTagName cookie
+    history 尽量不要用
+    操作DOM节点 添加 删除 更新 遍历 操作DOM 先找到
 </h>
 </body>
 </html>
