--- a/composer/composer_and_des.html
+++ b/composer/composer_and_des.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     composer install
+    给php解释器建立软链接，方便以后使用
+    sudo ln -s /usr/local/php/bin/php /usr/bin/         ok
+
 </body>
 </html>
